# OOP-Lab3

./: CMakeLists.txt  README.md  array.cpp  array.h  figure.cpp  figure.h  main.cpp  point.cpp  point.h  rectangle.cpp  rectangle.h  square.cpp  square.h  tests.cpp  trapezoid.cpp  trapezoid.h
